Completing doc for local deployment